searchbox box-shadow on iphone fixed

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -83,7 +83,7 @@
 
 .searchbar {
     background: #F7F9F4;
-    box-shadow: 2px 2px 25px 1px rgba(0, 0, 0, 0.12);
+    -webkit-box-shadow: 2px 2px 25px 1px rgba(0, 0, 0, 0.12);
     border-radius: 25px;
     padding: 8px 18px;
     outline: none;
